test/org/midica/testfiles/failing/zero-with-s.midica
INCLUDE inc/instruments.midica

0 - - s=5
